--- a/demos/st/stm32l475_discovery/ac6/.project
+++ b/demos/st/stm32l475_discovery/ac6/.project
@@ -238,7 +238,7 @@
 	</linkedResources>
 	<filteredResources>
 		<filter>
-			<id>1509693476795</id>
+			<id>1582779801384</id>
 			<name>lib/aws/FreeRTOS/portable</name>
 			<type>9</type>
 			<matcher>
@@ -247,7 +247,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1509693476798</id>
+			<id>1582779801387</id>
 			<name>lib/aws/FreeRTOS/portable</name>
 			<type>9</type>
 			<matcher>
@@ -256,12 +256,21 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1509693476805</id>
+			<id>1582779801390</id>
 			<name>lib/aws/FreeRTOS/portable</name>
 			<type>6</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-*</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1582779801392</id>
+			<name>lib/aws/FreeRTOS/portable</name>
+			<type>9</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-Common</arguments>
 			</matcher>
 		</filter>
 		<filter>
@@ -274,12 +283,12 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1509693517204</id>
+			<id>1582760633589</id>
 			<name>lib/aws/FreeRTOS/portable/GCC</name>
 			<type>9</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
-				<arguments>1.0-name-matches-false-false-ARM_CM4F</arguments>
+				<arguments>1.0-name-matches-false-false-ARM_CM4_MPU</arguments>
 			</matcher>
 		</filter>
 		<filter>
