--- a/demos/st/stm32l475_discovery/ac6/.project
+++ b/demos/st/stm32l475_discovery/ac6/.project
@@ -238,6 +238,15 @@
 	</linkedResources>
 	<filteredResources>
 		<filter>
+			<id>1589400375133</id>
+			<name>application_code/silhouette_demo/source</name>
+			<type>5</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-sil_demo_suspend.c</arguments>
+			</matcher>
+		</filter>
+		<filter>
 			<id>1582779801384</id>
 			<name>lib/aws/FreeRTOS/portable</name>
 			<type>9</type>
