--- a/demos/st/stm32l475_discovery/ac6/.project
+++ b/demos/st/stm32l475_discovery/ac6/.project
@@ -238,6 +238,33 @@
 	</linkedResources>
 	<filteredResources>
 		<filter>
+			<id>1591739020361</id>
+			<name>application_code/common_demos/include</name>
+			<type>5</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-aws_demo.h</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1591739020363</id>
+			<name>application_code/common_demos/include</name>
+			<type>5</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-aws_logging_task.h</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1591739085191</id>
+			<name>application_code/common_demos/source</name>
+			<type>5</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-aws_logging_task_dynamic_buffers.c</arguments>
+			</matcher>
+		</filter>
+		<filter>
 			<id>1589400375133</id>
 			<name>application_code/silhouette_demo/source</name>
 			<type>5</type>
