--- a/microbenchmarks/demos/st/stm32l475_discovery/ac6/.project
+++ b/microbenchmarks/demos/st/stm32l475_discovery/ac6/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>aws_demos</name>
+	<name>kage_microbenchmarks</name>
 	<comment></comment>
 	<projects>
 	</projects>
