--- a/coremark/demos/st/stm32l475_discovery/ac6/.project
+++ b/coremark/demos/st/stm32l475_discovery/ac6/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>kage_coremark</name>
+	<name>coremark</name>
 	<comment></comment>
 	<projects>
 	</projects>
