--- a/coremark/demos/st/stm32l475_discovery/ac6/.gitignore
+++ b/coremark/demos/st/stm32l475_discovery/ac6/.gitignore
@@ -1,3 +1,6 @@
-Debug
+# Ignore IDE-generated files
 .settings
-/Debug_baseline_Clang/
+
+# Ignore build results
+/baseline-coremark/
+/kage-coremark/
